Created the LoggedInView which is the basis of homepage, Also the program now compiles and runs - very basic still need to implement other use cases